# ecommerce-data-pipeline

./: .gitignore  README.md  requirements.txt
.github/workflows/: ci.yml
analytics/airflow/: Dockerfile  pyproject.toml
analytics/airflow/app/: __init__.py
analytics/airflow/dags/: rt_pipeline.py  trino_bootstrap_views.py
analytics/dbt/: dbt_project.yml  profiles.yml
analytics/dbt/ecom_analytics/: dbt_project.yml
analytics/dbt/models/: sources.yml
analytics/dbt/profiles/: profiles.yml
analytics/hive/: Dockerfile
analytics/hive/conf/: hive-site.xml
analytics/seeds/: event_seeder.py
analytics/spark/: Dockerfile
analytics/spark-jobs/: bronze_orders.py  bronze_payments.py  silver_enrich.py
analytics/spark/conf/: hive-site.xml  metrics.properties  (+2 more)
analytics/trino/: Dockerfile  config.properties  node.properties  trino_logs.txt
deploy/: airflow-connections.yaml  docker-compose.override.yaml  docker-compose.yaml
deploy/airflow/: airflow-connections.yaml
deploy/kafka/: init-topics.sh
deploy/monitoring/: prometheus.yaml
deploy/postgres-init/: 01-create-airflow-db.sql  02-create-hive-db.sql
deploy/scripts/: init-airflow.sh
deploy/trino/: trino_bootstrap.py
docs/: architecture.md  events.md  index.html
scripts/: rebuild.py  run_demo.py  seed.py
services/auth/: alembic.ini
services/cart/: pyproject.toml
services/catalog/: alembic.ini
services/notifications/: README.md
services/order/: README.md  alembic.ini  pyproject.toml
services/payment/: README.md  pyproject.toml
services/shipping/: README.md  alembic.ini  pyproject.toml
(+93 files in other folders)
