[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecom-airflow"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow-providers-apache-spark>=4.4.0",
]

[project.optional-dependencies]

[tool.setuptools.packages.find]
where = [""]
include = ["app*"]